--- a/boot/css/bootstrap.css
+++ b/boot/css/bootstrap.css
@@ -4038,7 +4038,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
   color: #ffffff;
-  background-color: #006687;
+  background-color: #324A61;
+  /*background-color: #006687;*/
+}
+.onclick {
+  background-color: #006687; 
 }
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
