--- a/css/index.css
+++ b/css/index.css
@@ -504,9 +504,9 @@ a {
     width: 100%;
     height: 70px;
     width: 100%;
-height: 70px;
-background-image: url(/img/pattern.png);
-background-size: 112%;
+    height: 70px;
+    background-image: url(../img/pattern.png);
+    background-size: 112%;
 }
 .gray {color: #333;}
 .seach-box-contact {
