--- a/css/index.css
+++ b/css/index.css
@@ -546,7 +546,7 @@ a {
 
 .messages {
     width: 100%;
-    height: auto;
+    
     border-bottom: 1px solid #ccc;
     padding: 8px 15px 8px 10px;
 }
@@ -1574,6 +1574,43 @@ a.button-red:hover {color: white}
     margin-right: auto;
 }
 
+/* SWIPE RIGHT MESSAGE LISTING */
+.center-swipe {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    overflow: auto;
+    height: 50%;
+    margin-top: auto;
+    position: absolute;
+}
+
+#message-archive {
+    position: absolute; 
+    width: 100%; 
+    height: 100%; 
+    padding-right: 10px; 
+    text-align:center;
+    z-index:-1;
+    top: 0px;
+    margin-top: 0px;
+}
+
+.delete-swipe {
+    height: 100%;
+    color: #ffffff;
+    background-color: #c94437; 
+}
+.delete-swipe a {
+    color: #ffffff !important;
+}
+.cancel-swipe {
+    height: 100%;
+    color: #ffffff;
+    background-color: #324A61; 
+}
 
 
 
