--- a/css/index.css
+++ b/css/index.css
@@ -562,13 +562,13 @@ a {
 #search-message {border-bottom: 1px solid #ccc;}
 
 .icon-holder {
-    width: auto;    
+    width: 50%;    
     margin-top: 30%;
     margin-left: auto;
     margin-right: auto;
 }
 .empty-messages {
-    width: 50%;
+    width: 100%;
     height: 100%;
     overflow: auto;
     margin: auto;
@@ -576,6 +576,7 @@ a {
     top: 0; left: 0; bottom: 0; right: 0;
     display: block;
     text-align: center;
+    background-color: #f7f7f7;
 }
 
 #wrapper {height: 100% !important;background-color: #ccc;}
