--- a/css/index.css
+++ b/css/index.css
@@ -1035,7 +1035,8 @@ a.button-red:hover {color: white}
 .page-sidebar-scroll{
     z-index:2;
     width:100%;
-    overflow-y: hidden;
+    overflow: auto;
+    overflow-y: scroll;
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
     height:100%;
